--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
 
 html {
     height: 100%;
+    width: 100vw;
 }
 
 body {
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 40px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('top-view-career-guidance-items-judges.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('giphy\ \(2\).gif');
+    background-size: contain;
 }
 
 .flip-card {
