--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
     gap: 40px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('giphy\ \(2\).gif');
-    background-size: contain;
+    background-size:115%;
 }
 
 .flip-card {
@@ -93,4 +93,9 @@ body {
     margin-top: 10px;
     margin-right: 20px;
     margin-left: 20px;
+  }
+
+  #img2 {
+    margin-bottom: 30px;
+    border-radius: 20px;
   }
